# so-smart-knob

./: .gitignore  platformio.ini  so-smart-knob.code-workspace
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_helpers.h
lib/ui/src/screens/: ui_Screen1.c  ui_conf_screen.c  ui_disp_settings_screen.c  ui_main_screen.c  ui_scan_screen.c  ui_sleep_screen.c  ui_splash_screen.c  ui_subscreen_1.c  ui_subscreen_2.c  ui_subscreen_3.c  ui_subscreen_4.c  ui_subscreen_5.c  ui_time.c  ui_working.c
src/: lv_conf.h  lvgl_v8_port.h  main.cpp
